# mtx-gui

./: .gitignore  .pre-commit-config.yaml  README  README.md  __init__.py  api.py  app.py  changers.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  slots.py
.github/workflows/: pre-commit.yml
Model/: api.py
Model/Changers/: MediumChanger.py  ScsiChanger.py  __init__.py
Model/Slots/: DataSlot.py  StorageSlot.py  __init__.py
View/: __init__.py
View/widgets/: button.py  frame.py  scrollbar.py
gui/: MainWindow.py  widgets.py
mtx_gui/: __init__.py  __main__.py
mtx_gui/Control/: __init__.py  api.py  application.py  observable.py
mtx_gui/Model/: MediumChanger.py  Slot.py  __init__.py  api.py
mtx_gui/Model/Tests/: APITests.py  TestMediumChanger.py  __init__.py
mtx_gui/View/: MainWindow.py  __init__.py
mtx_gui/View/img/: __init__.py  mc.gif.license
mtx_gui/View/widgets/: __init__.py  button.py  frame.py  label.py  menu.py  scrollbar.py
