# SPDX-FileCopyrightText: 2023 The mtx-gui Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = mtx_gui
description = Small GUI for managing Media changers
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Markus Rosjat
maintainer_email = markus.rosjat@gmail.com
url = https://github.com/rosjat/mtx_gui
license = LGPL-2.1
license_file = LICENSE
license_files =
    LICENSES/*
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    mtx

[options]
packages = find:
python_requires = ~= 3.10

[options.package_data]
mtx_gui.View.img = *.gif

[options.extras_require]
dev =
    isort
    mypy
    pre-commit
    pytest
    pytest-mypy
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel
